# inquerito-control-flow-97

./: README.md  README_TAURI_SETUP.md  TAURI_COMPATIBILITY_REPORT.md  TAURI_SETUP.md  TAURI_V2_MIGRATION_ANALYSIS.md  index.html  package-lock.json  package.json  tailwind.config.ts  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/migrations/: initial_schema.sql
src-tauri/src/: main.rs
src/components/: AppSidebar.tsx  DataExportImport.tsx  EditProcessModal.tsx  NewProcessModal.tsx  PendingActionsCard.tsx  ProcessActionButtons.tsx  ProcessCard.tsx  ProcessDetailsModal.tsx  ProcessFilters.tsx  ProcessHistoryCard.tsx  ProcessInfoCard.tsx
src/components/ui/: chart.tsx
src/contexts/: AuthContext.tsx  ConfigContext.tsx
src/hooks/: useCompletedActions.ts  useProcesses.ts  useUserProfile.ts
src/integrations/supabase/: client.ts  types.ts
src/lib/: secureStorage.ts  tauri-v1.ts  tauri.ts  validation.ts
src/pages/: Auth.tsx  Configuracoes.tsx  Index.tsx  Processos.tsx
src/utils/: dataExport.ts  forwardingColors.ts  processTransformers.ts  processUtils.ts
supabase/: config.toml
supabase/migrations/: 20250707154159-f20f1d80-84ac-4e0a-9b4e-c2ab0a7dff1f.sql  20250709145509-c5f68826-124b-4d6c-a062-6642e90a2693.sql  20250710160000-security-enhancements.sql  20250710161641-a36eaa84-0360-45f1-ba7b-806c6783a470.sql  20250711211321-6e194a23-71b6-4d6c-b437-bd249a5c8065.sql  20250711211439-19d7b1eb-31ca-4974-baf6-7c2509695c8d.sql
