[package]
name = "sistema-inqueritos"
version = "0.0.0"
description = "Sistema de Inquéritos - Desktop Offline"
authors = ["you"]
license = ""
repository = ""
default-run = "sistema-inqueritos"
edition = "2021"
rust-version = "1.60"

[build-dependencies]
tauri-build = { version = "1.5", features = [] }

[dependencies]
serde_json = "1.0"
serde = { version = "1.0", features = ["derive"] }
tauri = { version = "1.7", features = ["api-all"] }
tauri-plugin-sql = { version = "1.4", features = ["sqlite"] }
uuid = { version = "1.0", features = ["v4", "serde"] }
chrono = { version = "0.4", features = ["serde"] }

[features]
default = ["custom-protocol"]
custom-protocol = ["tauri/custom-protocol"]